--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "APL",
   "description": "Advanced Project Launcher",
   "author": "srdesigns",
-  "version": "0.1.0",
+  "version": "0.1.1",
   "private": true,
   "main": "electron/index.js",
   "homepage": "./",
@@ -11,6 +11,7 @@
     "electron-updater": "^2.16.1",
     "express": "^4.16.2",
     "firebase": "^4.6.2",
+    "node-jen": "^1.0.6",
     "polished": "^1.9.0",
     "react": "^16.0.0",
     "react-dom": "^16.0.0",
