--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "react-loading": "^1.0.1",
     "react-redux": "^5.0.6",
     "react-scripts": "1.0.17",
+    "react-transition-group": "^2.2.1",
     "redux": "^3.7.2",
     "request": "^2.83.0",
     "rimraf": "^2.6.2",
